# shutdown

./: Cargo.toml  shell.nix
src/: main.rs  mqtt.rs
src/calendar/: event.rs  mod.rs
src/hass/: attributes.rs  home_assistant.rs  mod.rs  state.rs
