[package]
name = "shutdown"
version = "0.1.0"
authors = ["Andreas Rammhold <andreas@rammhold.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mosquitto-client = "0.1.5"      # Rust interface to the Mosquitto MQTT broker client
tokio = "0.1"
futures = "0.1.29"
