[package]
name = "shutdown"
version = "0.1.0"
authors = ["Andreas Rammhold <andreas@rammhold.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqtt = { version = "0.31.0", default-features = false, features = [ "jwt" ] }
mqtt311 = "0.2.0"
tokio = { version = "0.1", features = [ "timer" ], default-features = false }
futures = "0.1.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.9", default-features = false, features = [ "rustls-tls" ] }
env_logger = "0.7.0"
libical-sys = "0.1.3"
chrono = "0.4"

[profile.release]
lto = true
